added application to test jna messagebox - code in place but not yet tested