@@ -9,10 +9,24 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>interop-win32-ansi</artifactId>
+    <artifactId>interop-app</artifactId>
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib/</classpathPrefix>
+                            <mainClass>moreland.sample.jna.interop.app.Application</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -20,7 +34,6 @@
                 <configuration>
                     <argLine>
                         --add-opens moreland.sample.jna.interop.service/moreland.sample.jna.interop.service=ALL-UNNAMED
-                        --add-opens moreland.sample.jna.interop.service.win32/moreland.sample.jna.interop.service.win32=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
@@ -33,11 +46,5 @@
             <artifactId>interop-service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>net.java.dev.jna</groupId>
-            <artifactId>jna</artifactId>
-            <version>5.6.0</version>
-        </dependency>
     </dependencies>
-
 </project>
